# Advent-Of-Code-2022

./: meson.build
day1/: meson.build  part1.cpp  part2.cpp
day10/: meson.build  part1.cpp  part2.cpp
day11/: meson.build  part1.cpp  part2.cpp
day12/: meson.build  part1.cpp  part2.cpp
day2/: meson.build  part1.cpp  part2.cpp
day3/: meson.build  part1.cpp  part2.cpp
day4/: part1.cpp  part2.cpp
day5/: meson.build  part1.cpp  part2.cpp
day6/: benchmark.cpp  meson.build  part1.cpp  part2.cpp
day7/: benchmark.cpp  meson.build  part1.cpp  part2.cpp
day8/: benchmark.cpp  meson.build  part1.cpp  part1_simd.cpp  part2.cpp
day9/: meson.build  part1.cpp  part2.cpp
subprojects/: .gitignore
